# agents

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/community_contributions/Shmacked/full_engineering_team/: README.md  pyproject.toml
3_crew/community_contributions/Shmacked/full_engineering_team/memory/: long_term_memory_storage.db
3_crew/community_contributions/Shmacked/full_engineering_team/src/full_engineering_team/: crew.py  main.py
3_crew/community_contributions/Shmacked/full_engineering_team/src/full_engineering_team/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/Shmacked/stockpicker/: pyproject.toml
3_crew/community_contributions/Shmacked/stockpicker/memory/: long_term_memory_storage.db
3_crew/community_contributions/Shmacked/stockpicker/output/: decision.md  research_report.json  trending_companies.json
3_crew/community_contributions/Shmacked/stockpicker/src/stockpicker/: crew.py  main.py
3_crew/community_contributions/Shmacked/stockpicker/src/stockpicker/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/Shmacked/stockpicker/src/stockpicker/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent.py  tickets.db
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  4_lab4.ipynb  app.py  traders.py
(+77 files in other folders)
