[project]
name = "full_engineering_team"
version = "0.1.0"
description = "full_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.2.0",
    "flask>=3.1.2",
    "litellm>=1.78.7",
    "pip>=25.3",
]

[project.scripts]
full_engineering_team = "full_engineering_team.main:run"
run_crew = "full_engineering_team.main:run"
train = "full_engineering_team.main:train"
replay = "full_engineering_team.main:replay"
test = "full_engineering_team.main:test"
run_with_trigger = "full_engineering_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
